--- a/home.html
+++ b/home.html
@@ -8,21 +8,21 @@
   </head>
   <body>
     <div class="container days-management">
-      <a href="days/saturday.html"> <button>يوم الجمعه</button></a>
-      <a href="days/tharsday.html"><button>يوم الخميس</button></a>
-      <a href="days/wendsday.html"><button>يوم الأربعاء</button></a>
-      <a href="days/tuesday.html"><button>يوم الثلاثاء</button></a>
-      <a href="days/monday.html"><button>يوم الأثنين</button></a>
-      <a href="days/sunday.html"><button>يوم الأحد</button></a>
-      <a href="days/saturday.html"><button>يوم السبت</button></a>
+      <a href="names/friday_names.html"><button>يوم الجمعه</button></a>
+      <a href="names/thursday_names.html"><button>يوم الخميس</button></a>
+      <a href="names/wendsday_names.html"><button>يوم الأربعاء</button></a>
+      <a href="names/tuesday_names.html"><button>يوم الثلاثاء</button></a>
+      <a href="names/monday_names.html"><button>يوم الأثنين</button></a>
+      <a href="names/sunday_names.html"><button>يوم الأحد</button></a>
+      <a href="names/saturday_names.html"><button>يوم السبت</button></a>
     </div>
 
-    <div class="guys-management">
+    <!-- <div class="guys-management">
       <a href="following/home.html"> <button>المتابعة</button></a>
-    </div>
-
+    </div> -->
+    <!-- 
     <div class="guys-management final-button">
       <a href="sons/home.html"> <button>الأولاد</button></a>
-    </div>
+    </div> -->
   </body>
 </html>
